--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,3 +16,7 @@ RUN sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
 # after the first time the container is built, try not to edit steps before to keep it cached
 # and add new steps after this one
 RUN cargo install ic-cdk-optimizer
+
+# install wasm32-unknown-unknown
+# https://internetcomputer.org/docs/current/developer-docs/build/cdks/cdk-rs-dfinity/rust-quickstart#register-build-and-deploy-your-project
+RUN rustup target add wasm32-unknown-unknown
