--- a/omnia_main/package.json
+++ b/omnia_main/package.json
@@ -9,9 +9,9 @@
     "Canister"
   ],
   "scripts": {
-    "build": "webpack",
+    "start": "cd src/omnia_main_frontend && npm run start",
+    "build": "cd src/omnia_main_frontend && npm run build",
     "prebuild": "npm run copy:types",
-    "start": "webpack serve --mode development --env development",
     "prestart": "npm run copy:types",
     "copy:types": "rsync -avr .dfx/$(echo ${DFX_NETWORK:-'**'})/canisters/** --exclude='assets/' --exclude='idl/' --exclude='*.wasm' --exclude='*.most' --delete src/declarations"
   },
@@ -22,14 +22,9 @@
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "events": "3.3.0",
-    "html-webpack-plugin": "5.5.0",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
-    "terser-webpack-plugin": "^5.3.3",
-    "util": "0.12.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.8.1"
+    "util": "0.12.4"
   },
   "engines": {
     "node": "^12 || ^14 || ^16 || ^18"
