--- a/omnia_main/src/omnia_user_frontend/package.json
+++ b/omnia_main/src/omnia_user_frontend/package.json
@@ -6,6 +6,7 @@
     "@dfinity/auth-client": "^0.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
