--- a/omnia_main/src/omnia_user_frontend/package.json
+++ b/omnia_main/src/omnia_user_frontend/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "@dfinity/auth-client": "^0.14.1",
+    "@dfinity/authentication": "^0.14.1",
+    "@dfinity/identity": "^0.14.1",
+    "crypto-browserify": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
+    "simple-cbor": "^0.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
