environment and user profile databases in one canister

--- a/omnia_main/Cargo.toml
+++ b/omnia_main/Cargo.toml
@@ -1,6 +1,5 @@
 [workspace]
 members = [
-    "src/user_profile_backend",
-    "src/environments_db",
+    "src/database",
     "src/omnia_backend",
 ]
