--- a/omnia_main/src/database/Cargo.toml
+++ b/omnia_main/src/database/Cargo.toml
@@ -13,3 +13,5 @@ candid = "0.7.14"
 ic-cdk = "0.5.2"
 ic-cdk-macros = "0.5.2"
 serde = "1.0.111"
+getrandom = { version = "0.2", features = ["custom"] }
+rand = "0.8.5"
