--- a/omnia_main/src/omnia_gateway_frontend/package.json
+++ b/omnia_main/src/omnia_gateway_frontend/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.8",
     "react-scripts": "5.0.1",
+    "simple-cbor": "^0.4.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
