--- a/omnia_main/src/omnia_manager_frontend/package.json
+++ b/omnia_main/src/omnia_manager_frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dfinity/auth-client": "^0.15.1",
+    "@dfinity/authentication": "^0.14.2",
+    "@dfinity/identity": "^0.15.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +13,10 @@
     "@types/node": "^16.18.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "crypto-browserify": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-json-view": "^1.21.3",
     "react-qr-code": "^2.0.8",
     "react-scripts": "5.0.1",
     "simple-cbor": "^0.4.1",
