--- a/omnia_main/src/omnia_user_frontend/package.json
+++ b/omnia_main/src/omnia_user_frontend/package.json
@@ -9,6 +9,7 @@
     "crypto-browserify": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-json-view": "^1.21.3",
     "react-qr-reader": "^3.0.0-beta-1",
     "simple-cbor": "^0.4.1",
     "web-vitals": "^2.1.4"
