--- a/omnia_main/src/omnia_types/Cargo.toml
+++ b/omnia_main/src/omnia_types/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
-name = "omnia_backend"
+name = "omnia_types"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["lib"]
 
 [dependencies]
 candid = "0.7.14"
 ic-cdk = "0.5.2"
-ic-cdk-macros = "0.5.2"
 serde = "1.0.111"
-getrandom = { version = "0.2", features = ["custom"] }
-omnia_types = { path = "../omnia_types"}
