--- a/omnia_main/src/database/Cargo.toml
+++ b/omnia_main/src/database/Cargo.toml
@@ -19,3 +19,4 @@ hex = "0.4.3"
 omnia_types ={ path = "../omnia_types"}
 omnia_utils ={ path = "../omnia_utils"}
 ciborium = "0.2.0"
+rand_chacha = { version = "*", default-features = false }
