--- a/omnia_main/package.json
+++ b/omnia_main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omnia_frontends",
+  "name": "omnia_main",
   "version": "0.1.0",
   "description": "Internet Computer starter application",
   "keywords": [
@@ -19,17 +19,27 @@
     "deploy": "./scripts/deploy.sh",
     "deploy:backend": "./scripts/deploy.sh --backend",
     "generate-dids-and-deploy": "npm run generate:dids && npm run deploy",
-    "generate-dids-and-deploy:backend": "npm run generate:dids && npm run deploy:backend"
+    "generate-dids-and-deploy:backend": "npm run generate:dids && npm run deploy:backend",
+    "test": "jest"
   },
   "devDependencies": {
-    "@dfinity/agent": "0.13.3",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@dfinity/agent": "^0.13.3",
     "@dfinity/candid": "0.13.3",
-    "@dfinity/principal": "0.13.3",
+    "@dfinity/principal": "^0.13.3",
+    "@types/jest": "^29.2.6",
+    "@types/uuid": "^9.0.0",
     "assert": "2.0.0",
+    "babel-jest": "^29.3.1",
     "buffer": "6.0.3",
     "events": "3.3.0",
+    "jest": "^29.3.1",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4",
     "util": "0.12.4"
   },
   "engines": {
@@ -40,5 +50,10 @@
     "last 2 firefox version",
     "last 2 safari version",
     "last 2 edge version"
-  ]
+  ],
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "node-fetch": "^3.3.0",
+    "uuid": "^9.0.0"
+  }
 }
