feat: dids must be generated manually

--- a/omnia_main/package.json
+++ b/omnia_main/package.json
@@ -15,20 +15,18 @@
     "prebuild": "npm run generate:types",
     "prestart": "npm run generate:types",
     "generate:types": "dfx generate",
-    "generate:dids": "./scripts/generate-dids.sh",
+    "check:dids": "./scripts/check-dids.sh",
     "deploy": "./scripts/deploy.sh",
     "deploy:backend": "./scripts/deploy.sh --backend",
-    "generate-dids-and-deploy": "npm run generate:dids && npm run deploy",
-    "generate-dids-and-deploy:backend": "npm run generate:dids && npm run deploy:backend",
     "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@dfinity/agent": "^0.13.3",
-    "@dfinity/candid": "0.13.3",
-    "@dfinity/principal": "^0.13.3",
+    "@dfinity/agent": "^0.15.3",
+    "@dfinity/candid": "^0.15.3",
+    "@dfinity/principal": "^0.15.3",
     "@types/jest": "^29.2.6",
     "@types/uuid": "^9.0.0",
     "assert": "2.0.0",
