--- a/omnia_main/package.json
+++ b/omnia_main/package.json
@@ -26,19 +26,24 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@dfinity/agent": "^0.13.3",
-    "@dfinity/candid": "0.13.3",
-    "@dfinity/principal": "^0.13.3",
+    "@dfinity/agent": "^0.15.3",
+    "@dfinity/candid": "^0.15.3",
+    "@dfinity/identity-secp256k1": "^0.15.3",
+    "@dfinity/principal": "^0.15.3",
+    "@types/hdkey": "^2.0.1",
     "@types/jest": "^29.2.6",
     "@types/uuid": "^9.0.0",
     "assert": "2.0.0",
     "babel-jest": "^29.3.1",
+    "bip39": "^3.0.4",
     "buffer": "6.0.3",
     "events": "3.3.0",
+    "hdkey": "^2.1.0",
     "jest": "^29.3.1",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
     "ts-jest": "^29.0.5",
+    "tweetnacl": "^1.0.3",
     "typescript": "^4.9.4",
     "util": "0.12.4"
   },
