chore: restore generate and deploy commands

--- a/omnia_main/package.json
+++ b/omnia_main/package.json
@@ -18,6 +18,8 @@
     "generate:dids": "./scripts/generate-dids.sh",
     "deploy": "./scripts/deploy.sh",
     "deploy:backend": "./scripts/deploy.sh --backend",
+    "generate-dids-and-deploy": "npm run generate:dids && npm run deploy",
+    "generate-dids-and-deploy:backend": "npm run generate:dids && npm run deploy:backend",
     "test": "jest"
   },
   "devDependencies": {
