--- a/omnia_main/package.json
+++ b/omnia_main/package.json
@@ -14,7 +14,8 @@
     "build": "./scripts/build.sh",
     "prebuild": "npm run generate:types",
     "prestart": "npm run generate:types",
-    "generate:types": "dfx generate",
+    "generate:types": "./scripts/generate-types.sh",
+    "generate:types:backend": "./scripts/generate-types.sh --backend",
     "generate:dids": "./scripts/generate-dids.sh",
     "deploy": "./scripts/deploy.sh",
     "deploy:backend": "./scripts/deploy.sh --backend",
@@ -26,9 +27,9 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@dfinity/agent": "^0.15.3",
-    "@dfinity/candid": "^0.15.3",
-    "@dfinity/identity-secp256k1": "^0.15.3",
+    "@dfinity/agent": "^0.15.5",
+    "@dfinity/candid": "^0.15.5",
+    "@dfinity/identity-secp256k1": "^0.15.5",
     "@dfinity/principal": "^0.15.3",
     "@types/hdkey": "^2.0.1",
     "@types/jest": "^29.2.6",
