--- a/omnia_main/package.json
+++ b/omnia_main/package.json
@@ -33,6 +33,7 @@
     "@dfinity/principal": "^0.15.3",
     "@types/hdkey": "^2.0.1",
     "@types/jest": "^29.2.6",
+    "@types/sparql-http-client": "^2.2.8",
     "@types/uuid": "^9.0.0",
     "assert": "2.0.0",
     "babel-jest": "^29.3.1",
@@ -42,6 +43,7 @@
     "hdkey": "^2.1.0",
     "jest": "^29.3.1",
     "process": "0.11.10",
+    "sparql-http-client": "^2.4.2",
     "stream-browserify": "3.0.0",
     "ts-jest": "^29.0.5",
     "tweetnacl": "^1.0.3",
