feat: rdf database on chain (tests passing)

--- a/omnia_main/Cargo.toml
+++ b/omnia_main/Cargo.toml
@@ -1,6 +1,2 @@
 [workspace]
-members = [
-    "src/database",
-    "src/omnia_backend",
-    "src/omnia_types",
-]
+members = ["src/database", "src/omnia_backend", "src/omnia_types"]
