--- a/omnia_main/src/omnia_backend/Cargo.toml
+++ b/omnia_main/src/omnia_backend/Cargo.toml
@@ -14,5 +14,8 @@ ic-cdk = "0.7.4"
 ic-cdk-macros = "0.6.10"
 serde = "1.0.111"
 serde_json = "1.0.93"
-omnia_types = { path = "../omnia_types"}
-omnia_utils ={ path = "../omnia_utils"}
+omnia_types = { path = "../omnia_types" }
+omnia_utils = { path = "../omnia_utils" }
+ic-oxigraph = { git = "https://github.com/omnia-network/ic-oxigraph.git", version = "0.3.17-dev" }
+ciborium = "0.2.1"
+sparesults = { git = "https://github.com/omnia-network/ic-oxigraph.git", version = "0.1.8-dev" }
