--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.245.2/containers/rust
 {
-	"name": "omnia-ic-dev-environment",
+	"name": "omnia-backend-dev",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": {
@@ -13,14 +13,14 @@
 
 	// create a local docker network for other containers to connect to
 	// the error is ignored if the network already exists
-	"initializeCommand": "docker network create omnia-ic-local || true",
+	"initializeCommand": "docker network create omnia-backend-local || true",
 
 	"runArgs": [
 		"--cap-add=SYS_PTRACE",
 		"--security-opt",
 		"seccomp=unconfined",
 		// attach the container to the local network
-		"--network=omnia-ic-local"
+		"--network=omnia-backend-local"
 	],
 
 	// Configure tool-specific properties.
