--- a/src/database/Cargo.toml
+++ b/src/database/Cargo.toml
@@ -13,6 +13,10 @@ candid = "0.8.4"
 ic-cdk = "0.7.4"
 ic-cdk-macros = "0.6.10"
 serde = "1.0.111"
-omnia_types ={ path = "../omnia_types"}
-omnia_utils ={ path = "../omnia_utils"}
+omnia_types = { path = "../omnia_types" }
+omnia_utils = { path = "../omnia_utils" }
 ciborium = "0.2.1"
+uuid = { version = "1.3.2", features = ["v4"] }
+rand = "0.8.5"
+getrandom = { version = "0.2.9", features = ["custom"] }
+ic-cdk-timers = "0.1.2"
