--- a/src/omnia_utils/Cargo.toml
+++ b/src/omnia_utils/Cargo.toml
@@ -15,3 +15,4 @@ getrandom = { version = "0.2", features = ["custom"] }
 rand = "0.8.5"
 hex = "0.4.3"
 rand_chacha = { version = "*", default-features = false }
+uuid = { version = "1.3.2", features = ["v4"] }
