--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "events": "3.3.0",
     "hdkey": "^2.1.0",
     "jest": "^29.3.1",
+    "json": "^11.0.0",
     "license-checker": "^25.0.1",
     "process": "0.11.10",
     "sparql-http-client": "^2.4.2",
