--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "node-fetch": "^3.3.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "secp256k1": "^4.0.3"
   }
 }
