--- a/src/omnia_backend/Cargo.toml
+++ b/src/omnia_backend/Cargo.toml
@@ -24,3 +24,6 @@ rand = "0.8.5"
 getrandom = { version = "0.2.9", features = ["custom"] }
 ic-cdk-timers = "0.1.2"
 ic-ledger-types = "0.5.0"
+hex = "0.4.3"
+sha2 = "0.10.6"
+k256 = { version = "0.12.0", features = ["ecdsa"] }
