refactor: ic management calls from library, utils

--- a/src/scripts/Cargo.toml
+++ b/src/scripts/Cargo.toml
@@ -9,4 +9,5 @@ license = "MIT"
 [dependencies]
 candid = "0.8.4"
 ic-ledger-types = "0.5.0"
-hex = "0.3.0"
+hex = "0.4.3"
+omnia_utils = { path = "../omnia_utils" }
