--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@dfinity/agent": "^0.15.5",
     "@dfinity/candid": "^0.15.5",
     "@dfinity/identity-secp256k1": "^0.15.5",
+    "@dfinity/ledger": "^0.0.8",
+    "@dfinity/nns": "^0.16.0",
     "@dfinity/principal": "^0.15.3",
     "@types/hdkey": "^2.0.1",
     "@types/jest": "^29.2.6",
@@ -58,7 +60,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "node-fetch": "^3.3.0",
-    "uuid": "^9.0.0",
-    "secp256k1": "^4.0.3"
+    "secp256k1": "^4.0.3",
+    "uuid": "^9.0.0"
   }
 }
