--- a/src/omnia_utils/Cargo.toml
+++ b/src/omnia_utils/Cargo.toml
@@ -19,3 +19,6 @@ rand_chacha = { version = "*", default-features = false }
 uuid = { version = "1.3.2", features = ["v4"] }
 ic-ledger-types = "0.5.0"
 ic-cdk-timers = "0.2.0"
+sha2 = "0.10.7"
+omnia_types = { path = "../omnia_types" }
+serde_cbor = "0.11.2"
