--- a/src/application_placeholder/Cargo.toml
+++ b/src/application_placeholder/Cargo.toml
@@ -17,3 +17,4 @@ omnia_utils = { path = "../omnia_utils" }
 omnia_types = { path = "../omnia_types" }
 ic-cdk-macros = "0.6.10"
 ic-cdk = "0.8.1"
+omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", version = "0.1.0" }
