--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "ms-vscode-remote.remote-containers",
-        "rust-lang.rust-analyzer"
+        "rust-lang.rust-analyzer",
+        "dfinity-foundation.vscode-motoko"
     ]
 }
