--- a/src/application_placeholder/Cargo.toml
+++ b/src/application_placeholder/Cargo.toml
@@ -16,4 +16,4 @@ omnia_utils = { path = "../omnia_utils" }
 omnia_types = { path = "../omnia_types" }
 ic-cdk-macros = "0.6.10"
 ic-cdk = "0.8.1"
-omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", version = "0.1.0" }
+omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "f2a1fdf5272dc4adf0b4f0a955b6f7219660dfb3" }
