--- a/src/database/Cargo.toml
+++ b/src/database/Cargo.toml
@@ -18,7 +18,5 @@ omnia_types = { path = "../omnia_types" }
 omnia_utils = { path = "../omnia_utils" }
 ciborium = "0.2.1"
 uuid = { version = "1.3.2", features = ["v4"] }
-rand = "0.8.5"
-getrandom = { version = "0.2.9", features = ["custom"] }
-omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", version = "0.1.0" }
 ic-stable-structures = "0.5.5"
+omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "f2a1fdf5272dc4adf0b4f0a955b6f7219660dfb3" }
