--- a/src/application_placeholder/Cargo.toml
+++ b/src/application_placeholder/Cargo.toml
@@ -15,5 +15,5 @@ hex = "0.4.3"
 omnia_utils = { path = "../omnia_utils" }
 omnia_types = { path = "../omnia_types" }
 ic-cdk-macros = "0.6.10"
-ic-cdk = "0.8.1"
-omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "f2a1fdf5272dc4adf0b4f0a955b6f7219660dfb3" }
+ic-cdk = "0.9.2"
+omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "542265a977d9968da5945e660884c5cf8b00e09e", version = "0.1.0" }
