--- a/src/omnia_backend/Cargo.toml
+++ b/src/omnia_backend/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 candid = "0.8.4"
-ic-cdk = "0.8.1"
+ic-cdk = "0.9.2"
 ic-cdk-macros = "0.6.10"
 serde = "1.0.111"
 serde_json = "1.0.93"
@@ -24,4 +24,4 @@ ic-cdk-timers = "0.2.0"
 ic-ledger-types = "0.5.0"
 hex = "0.4.3"
 k256 = { version = "0.13.1", features = ["ecdsa"] }
-omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "f2a1fdf5272dc4adf0b4f0a955b6f7219660dfb3" }
+omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "542265a977d9968da5945e660884c5cf8b00e09e", version = "0.1.0" }
