--- a/src/omnia_types/Cargo.toml
+++ b/src/omnia_types/Cargo.toml
@@ -11,8 +11,8 @@ crate-type = ["lib"]
 
 [dependencies]
 candid = "0.8.4"
-ic-cdk = "0.8.1"
+ic-cdk = "0.9.2"
 ic-stable-structures = "0.5.5"
-omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "f2a1fdf5272dc4adf0b4f0a955b6f7219660dfb3" }
+omnia-core-sdk = { git = "https://github.com/omnia-network/omnia-sdk", rev = "542265a977d9968da5945e660884c5cf8b00e09e", version = "0.1.0" }
 serde = "1.0.111"
 sha2 = "0.10.7"
